# SUPLauncher

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  build.py  main.py  pyproject.toml  requirements.txt  setup.py
src/: __init__.py
src/controllers/: __init__.py  app_controller.py  minecraft_controller.py  profile_controller.py
src/core/: __init__.py  config.py  exceptions.py  logger.py  paths.py  utils.py
src/models/: __init__.py  profile.py  settings.py
src/services/: __init__.py  auth_service.py  minecraft_service.py  profile_service.py  update_service.py  version_service.py
src/ui/: __init__.py
src/ui/components/: __init__.py  animated_button.py  custom_title_bar.py  notification.py  profile_card.py  progress_indicator.py
src/ui/styles/: components.qss  dark.qss  main.qss
src/ui/views/: __init__.py  creator_view.py  home_view.py  profiles_view.py  settings_view.py
src/ui/windows/: __init__.py  main_window.py  profile_editor.py  settings_window.py
